--- a/.env
+++ b/.env
@@ -1,15 +1,21 @@
-# MongoDB连接（暂时用本地，后面换Atlas）
+# Database
 MONGODB_URI=mongodb://localhost:27017/ourverse
 
-# JWT密钥
-JWT_SECRET=local-test-secret-key-12345
+# JWT Secret
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
-# GitHub OAuth（本地测试，可先留空）
-GITHUB_CLIENT_ID=Ov23liJIjrJfj05yFLQq
-GITHUB_CLIENT_SECRET=c535cd8afd253556be1019ee2cf4061bc10caca4
-GITHUB_CALLBACK_URL=http://localhost:8444/api/auth/github/callback
+# GitHub OAuth
+GITHUB_CLIENT_ID=your_github_client_id_here
+GITHUB_CLIENT_SECRET=your_github_client_secret_here
+GITHUB_CALLBACK_URL=https://localhost:8444/api/auth/github/callback
 
-# 端口
+# Amap API - Get these from https://lbs.amap.com/
+# Web端JS API密钥 (用于前端地图显示)
+AMAP_WEB_API_KEY=c8cb70e52409857f684c6fb41fc6e7b4
+AMAP_SECURITY_CODE=bc478c0ea499e9592e5a5f129702fd34
+# Web服务API密钥 (用于后端REST API调用)
+AMAP_REST_API_KEY=c932d3e8288b4f88ece512e13d84ae89
+
+# Server
 PORT=8444
-AMAP_API_KEY=c8cb70e52409857f684c6fb41fc6e7b4
 NODE_ENV=development
