--- a/env.example
+++ b/env.example
@@ -9,6 +9,10 @@ GITHUB_CLIENT_ID=your_github_client_id_here
 GITHUB_CLIENT_SECRET=your_github_client_secret_here
 GITHUB_CALLBACK_URL=https://localhost:8444/api/auth/github/callback
 
+# Amap API
+AMAP_API_KEY=your_amap_api_key_here
+AMAP_SECURITY_CODE=your_amap_security_code_here
+
 # Server
 PORT=8444
 NODE_ENV=development
