--- a/.env
+++ b/.env
@@ -1,21 +1,67 @@
-# Database
+# ==========================================
+# OurVerse Photo Sharing App - Configuration
+# ==========================================
+
+# Database Configuration
 MONGODB_URI=mongodb://localhost:27017/ourverse
 
-# JWT Secret
+# Authentication & Security
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+BCRYPT_SALT_ROUNDS=10
 
-# GitHub OAuth
-GITHUB_CLIENT_ID=your_github_client_id_here
-GITHUB_CLIENT_SECRET=your_github_client_secret_here
-GITHUB_CALLBACK_URL=https://localhost:8444/api/auth/github/callback
+# GitHub OAuth Configuration
+GITHUB_CLIENT_ID=Ov23liJIjrJfj05yFLQq
+GITHUB_CLIENT_SECRET=c015187d32fb8cd7d54d716649a151a472bb2044
+GITHUB_CALLBACK_URL=http://localhost:8444/api/auth/github/callback
 
-# Amap API - Get these from https://lbs.amap.com/
-# Web端JS API密钥 (用于前端地图显示)
-AMAP_WEB_API_KEY=c8cb70e52409857f684c6fb41fc6e7b4
-AMAP_SECURITY_CODE=bc478c0ea499e9592e5a5f129702fd34
-# Web服务API密钥 (用于后端REST API调用)
-AMAP_REST_API_KEY=c932d3e8288b4f88ece512e13d84ae89
+# Domain & Protocol Configuration
+DOMAIN=localhost
+PROTOCOL=http
+FRONTEND_URL=http://localhost:8444
 
-# Server
+# Server Configuration
 PORT=8444
 NODE_ENV=development
+API_BASE_URL=http://localhost:8444
+
+# Amap (高德地图) API Configuration
+AMAP_WEB_API_KEY=c8cb70e52409857f684c6fb41fc6e7b4
+AMAP_REST_API_KEY=c932d3e8288b4f88ece512e13d84ae89
+AMAP_SECURITY_CODE=bc478c0ea499e9592e5a5f129702fd34
+
+# File Upload Configuration
+MAX_FILE_SIZE=10485760
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp
+UPLOADS_DIR=uploads
+
+# Business Logic Parameters
+DAILY_UPLOAD_LIMIT=3
+MAX_DISTANCE_VERIFICATION=50
+LOCATION_VERIFICATION_RADIUS=50
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Session Configuration
+SESSION_COOKIE_MAX_AGE=86400000
+SESSION_SECRET=your-session-secret-key
+
+# Health Check
+HEALTH_CHECK_PORT=3000
+
+# CORS Configuration
+CORS_ORIGIN=*
+
+# SSL/TLS Configuration (Production)
+SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
+SSL_KEY_PATH=/etc/nginx/ssl/key.pem
+
+# Docker Configuration
+DOCKER_APP_PORT=3000
+DOCKER_NGINX_HTTP_PORT=80
+DOCKER_NGINX_HTTPS_PORT=443
+
+# Logging
+LOG_LEVEL=info
+LOG_FILE=logs/app.log
