--- a/nginx.conf
+++ b/nginx.conf
@@ -51,20 +51,20 @@ http {
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     upstream ourverse_app {
-        server app:3000;
+        server app:${DOCKER_APP_PORT:-3000};
     }
 
     server {
-        listen 80;
-        server_name localhost;
-        
+        listen ${DOCKER_NGINX_HTTP_PORT:-80};
+        server_name _;
+
         # HTTP 到 HTTPS 重定向
-        return 301 https://$server_name$request_uri;
+        return 301 https://$host$request_uri;
     }
 
     server {
-        listen 443 ssl;
-        server_name localhost;
+        listen ${DOCKER_NGINX_HTTPS_PORT:-443} ssl;
+        server_name _;
 
         # SSL 证书
         ssl_certificate /etc/nginx/ssl/cert.pem;
