--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mongodb:
     image: mongo:6.0
@@ -20,9 +18,10 @@ services:
     container_name: ourverse-app
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "${DOCKER_APP_PORT:-3000}:${DOCKER_APP_PORT:-3000}"
     environment:
       - NODE_ENV=production
+      - HOST=0.0.0.0
     env_file:
       - .env
     volumes:
@@ -38,8 +37,8 @@ services:
     container_name: ourverse-nginx
     restart: unless-stopped
     ports:
-      - "80:80"
-      - "443:443"
+      - "${DOCKER_NGINX_HTTP_PORT:-80}:${DOCKER_NGINX_HTTP_PORT:-80}"
+      - "${DOCKER_NGINX_HTTPS_PORT:-443}:${DOCKER_NGINX_HTTPS_PORT:-443}"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./ssl:/etc/nginx/ssl:ro
