Refactor environment configuration for Railway deployment, remove Vercel-specific files and scripts. Update Docker and server configurations to support persistent storage and improve application structure.

--- a/.env.vercel
+++ b/.env.vercel
@@ -1,40 +1,68 @@
 # ==========================================
-# OurVerse Vercel 环境变量配置
+# OurVerse Photo Sharing App - Configuration
 # ==========================================
 
-# 数据库配置
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/ourverse?retryWrites=true&w=majority
+# Database Configuration
+MONGODB_URI=mongodb://localhost:27017/ourverse
 
-# 认证配置
+# Authentication & Security
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 BCRYPT_SALT_ROUNDS=10
 
-# GitHub OAuth 配置
-GITHUB_CLIENT_ID=your_github_client_id_here
-GITHUB_CLIENT_SECRET=your_github_client_secret_here
+# GitHub OAuth Configuration
+GITHUB_CLIENT_ID=Ov23liJIjrJfj05yFLQq
+GITHUB_CLIENT_SECRET=c015187d32fb8cd7d54d716649a151a472bb2044
+GITHUB_CALLBACK_URL=http://localhost:8444/api/auth/github/callback
 
-# 域名配置
-DOMAIN=your-domain.com
-PROTOCOL=https
-FRONTEND_URL=https://your-domain.com
+# Domain & Protocol Configuration
+DOMAIN=localhost
+PROTOCOL=http
+FRONTEND_URL=http://localhost:8444
 
-# 高德地图配置
-AMAP_WEB_API_KEY=your_amap_web_api_key_here
-AMAP_REST_API_KEY=your_amap_rest_api_key_here
-AMAP_SECURITY_CODE=your_amap_security_code_here
+# Server Configuration
+PORT=8444
+NODE_ENV=development
+API_BASE_URL=http://localhost:8444
 
-# 文件上传配置
+# Amap (高德地图) API Configuration
+AMAP_WEB_API_KEY=c8cb70e52409857f684c6fb41fc6e7b4
+AMAP_REST_API_KEY=26859910799f521708e1fa83aebf3582
+AMAP_SECURITY_CODE=bc478c0ea499e9592e5a5f129702fd34
+
+# File Upload Configuration
 MAX_FILE_SIZE=10485760
 ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp
+UPLOADS_DIR=uploads
 
-# 业务逻辑参数
+# Business Logic Parameters
 DAILY_UPLOAD_LIMIT=3
 MAX_DISTANCE_VERIFICATION=50
+LOCATION_VERIFICATION_RADIUS=50
 
-# 速率限制
+# Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# 会话配置
+# Session Configuration
 SESSION_COOKIE_MAX_AGE=86400000
 SESSION_SECRET=your-session-secret-key
+
+# Health Check
+HEALTH_CHECK_PORT=3000
+
+# CORS Configuration
+CORS_ORIGIN=*
+
+# SSL/TLS Configuration (Production)
+SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
+SSL_KEY_PATH=/etc/nginx/ssl/key.pem
+
+# Docker Configuration
+DOCKER_APP_PORT=3000
+DOCKER_NGINX_HTTP_PORT=80
+DOCKER_NGINX_HTTPS_PORT=443
+
+# Logging
+LOG_LEVEL=info
+LOG_FILE=logs/app.log
+# 临时禁用安全码进行测试
