--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,25 @@
 services:
   mongodb:
     image: mongo:6.0
-    container_name: ourverse-mongodb
     restart: unless-stopped
-    ports:
-      - "27017:27017"
     environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME:-admin}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-password}
       MONGO_INITDB_DATABASE: ourverse
     volumes:
       - mongodb_data:/data/db
       - ./mongo-init:/docker-entrypoint-initdb.d
-    networks:
-      - ourverse-network
+    # Railway会自动处理网络连接，无需手动配置
 
   app:
     build: .
-    container_name: ourverse-app
     restart: unless-stopped
-    ports:
-      - "${DOCKER_APP_PORT:-3000}:${DOCKER_APP_PORT:-3000}"
     environment:
       - NODE_ENV=production
       - HOST=0.0.0.0
+      - PORT=${PORT:-3000}
+      # Railway会注入数据库URL等环境变量
+      - MONGODB_URI=${MONGODB_URI}
     env_file:
       - .env
     volumes:
@@ -29,28 +27,8 @@ services:
       - ./logs:/app/logs
     depends_on:
       - mongodb
-    networks:
-      - ourverse-network
-
-  nginx:
-    image: nginx:alpine
-    container_name: ourverse-nginx
-    restart: unless-stopped
-    ports:
-      - "${DOCKER_NGINX_HTTP_PORT:-80}:${DOCKER_NGINX_HTTP_PORT:-80}"
-      - "${DOCKER_NGINX_HTTPS_PORT:-443}:${DOCKER_NGINX_HTTPS_PORT:-443}"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-      - ./uploads:/var/www/uploads:ro
-    depends_on:
-      - app
-    networks:
-      - ourverse-network
+    # Railway会自动暴露端口，无需手动配置
 
 volumes:
   mongodb_data:
-
-networks:
-  ourverse-network:
-    driver: bridge
+    # Railway提供持久化存储，无需额外配置
