--- a/env.example
+++ b/env.example
@@ -2,44 +2,43 @@
 # OurVerse Photo Sharing App - Configuration
 # ==========================================
 
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/ourverse
+# ==========================================
+# OurVerse Photo Sharing App - Railway Deployment Configuration
+# ==========================================
 
-# Authentication & Security
+# Database Configuration (Railway会注入这些变量)
+# MONGODB_URI - Railway自动提供
+# MONGO_USERNAME - Railway数据库用户名
+# MONGO_PASSWORD - Railway数据库密码
+
+# Authentication & Security (这些需要在Railway控制台手动设置)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 BCRYPT_SALT_ROUNDS=10
+SESSION_SECRET=your-session-secret-key
 
-# GitHub OAuth Configuration
+# GitHub OAuth Configuration (需要在Railway控制台设置)
 GITHUB_CLIENT_ID=your_github_client_id_here
 GITHUB_CLIENT_SECRET=your_github_client_secret_here
-# GITHUB_CALLBACK_URL: 生产环境使用，手动配置；开发环境自动生成
-GITHUB_CALLBACK_URL=https://your-domain.com/api/auth/github/callback
+# GITHUB_CALLBACK_URL: Railway会自动生成，使用Railway提供的域名
 
-# Domain & Protocol Configuration
-DOMAIN=your-domain.com
-PROTOCOL=https
-FRONTEND_URL=https://your-domain.com
+# Railway Environment Variables (Railway自动注入)
+# PORT - Railway自动分配
+# NODE_ENV - 自动设为production
+# DOMAIN - Railway自动提供
+# PROTOCOL - Railway自动提供 (https)
+# FRONTEND_URL - Railway自动提供
 
-# 开发环境配置示例：
-# DOMAIN=localhost
-# PROTOCOL=http
-# FRONTEND_URL=http://localhost:8444
-# GITHUB_CALLBACK_URL=http://localhost:8444/api/auth/github/callback
-
-# Server Configuration
-PORT=8444
-NODE_ENV=development
-API_BASE_URL=http://localhost:8444
-
-# Amap (高德地图) API Configuration
+# Amap (高德地图) API Configuration (需要在Railway控制台设置)
 AMAP_WEB_API_KEY=your_amap_web_api_key_here
 AMAP_REST_API_KEY=your_amap_rest_api_key_here
 AMAP_SECURITY_CODE=your_amap_security_code_here
 
-# File Upload Configuration
+# Application Configuration
 MAX_FILE_SIZE=10485760
 ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp
 UPLOADS_DIR=uploads
+LOG_LEVEL=info
+LOG_FILE=logs/app.log
 
 # Business Logic Parameters
 DAILY_UPLOAD_LIMIT=3
@@ -52,23 +51,7 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # Session Configuration
 SESSION_COOKIE_MAX_AGE=86400000
-SESSION_SECRET=your-session-secret-key
 
-# Health Check
-HEALTH_CHECK_PORT=3000
-
-# CORS Configuration
-CORS_ORIGIN=*
-
-# SSL/TLS Configuration (Production)
-SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
-SSL_KEY_PATH=/etc/nginx/ssl/key.pem
-
-# Docker Configuration
-DOCKER_APP_PORT=3000
-DOCKER_NGINX_HTTP_PORT=80
-DOCKER_NGINX_HTTPS_PORT=443
-
-# Logging
-LOG_LEVEL=info
-LOG_FILE=logs/app.log
+# Railway Specific Configuration
+# Railway会自动处理HTTPS和负载均衡，无需额外配置
+# CORS_ORIGIN=* # 在Railway上可能需要根据域名调整
