Update environment configuration for production deployment, including changes to .env and .env.prod files. Remove .env.production, .env.vercel, and related example files. Upgrade axios and dotenv dependencies to latest versions. Add automated ngrok deployment script for public URL management. Enhance MongoDB initialization script with new user index and improved error handling.

--- a/.env
+++ b/.env
@@ -12,17 +12,21 @@ BCRYPT_SALT_ROUNDS=10
 # GitHub OAuth Configuration
 GITHUB_CLIENT_ID=Ov23liJIjrJfj05yFLQq
 GITHUB_CLIENT_SECRET=c015187d32fb8cd7d54d716649a151a472bb2044
-GITHUB_CALLBACK_URL=http://localhost:8444/api/auth/github/callback
+GITHUB_CALLBACK_URL=https://rema-polysyllabic-yamileth.ngrok-free.dev/api/auth/github/callback
+
+GITHUB_TOKEN=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
 
 # Domain & Protocol Configuration
-DOMAIN=localhost
-PROTOCOL=http
-FRONTEND_URL=http://localhost:8444
+DOMAIN=rema-polysyllabic-yamileth.ngrok-free.dev
+PROTOCOL=https
+FRONTEND_URL=https://rema-polysyllabic-yamileth.ngrok-free.dev
+API_BASE_URL=https://rema-polysyllabic-yamileth.ngrok-free.dev
+
 
 # Server Configuration
 PORT=8444
-NODE_ENV=development
-API_BASE_URL=http://localhost:8444
+NODE_ENV=production
+API_BASE_URL=https://rema-polysyllabic-yamileth.ngrok-free.dev
 
 # Amap (高德地图) API Configuration
 AMAP_WEB_API_KEY=c8cb70e52409857f684c6fb41fc6e7b4
