Enhance user registration and authentication features by adding device tracking and IP location capabilities. Update MongoDB user schema to include registration details and improve error handling for duplicate entries. Adjust daily upload limit in environment configuration. Refactor photo loading logic to support clustering and improve user experience with nearby photos display.

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ MONGODB_URI=mongodb://localhost:27017/ourverse
 # Authentication & Security
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 BCRYPT_SALT_ROUNDS=10
+DAILY_UPLOAD_LIMIT=5
 
 # GitHub OAuth Configuration
 GITHUB_CLIENT_ID=Ov23liJIjrJfj05yFLQq
