--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,35 +1,68 @@
+version: "3.9"
+
 services:
   mongodb:
     image: mongo:6.0
+    container_name: ourverse-mongodb
     restart: unless-stopped
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME:-admin}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-password}
-      MONGO_INITDB_DATABASE: ourverse
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME:-ourverse}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-ourverse}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE:-ourverse}
     volumes:
       - mongodb_data:/data/db
       - ./mongo-init:/docker-entrypoint-initdb.d
-    # Railway会自动处理网络连接，无需手动配置
+    ports:
+      - "${MONGO_PORT:-27017}:27017"
+    healthcheck:
+      test: ["CMD-SHELL", "mongosh --quiet -u \"$MONGO_INITDB_ROOT_USERNAME\" -p \"$MONGO_INITDB_ROOT_PASSWORD\" --authenticationDatabase admin --eval \"db.adminCommand('ping').ok\" | grep 1"]
+      interval: 10s
+      timeout: 5s
+      start_period: 10s
+      retries: 5
+    networks:
+      - ourverse-network
 
   app:
+    container_name: ourverse-backend
     build:
       context: ../backend
     restart: unless-stopped
-    environment:
-      - NODE_ENV=production
-      - HOST=0.0.0.0
-      - PORT=${PORT:-3000}
-      # Railway会注入数据库URL等环境变量
-      - MONGODB_URI=${MONGODB_URI}
     env_file:
       - ../.env
+    environment:
+      NODE_ENV: production
+      HOST: 0.0.0.0
+      PORT: ${APP_PORT:-3000}
+      MONGODB_URI: ${MONGODB_URI}
+      JWT_SECRET: ${JWT_SECRET}
+      SESSION_SECRET: ${SESSION_SECRET:-}
+      ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-http://localhost:3000}
+      FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3000}
+      UPLOADS_DIR: ${UPLOADS_DIR:-uploads}
+      DAILY_UPLOAD_LIMIT: ${DAILY_UPLOAD_LIMIT:-5}
+      MAX_DISTANCE_VERIFICATION: ${MAX_DISTANCE_VERIFICATION:-50}
+      AMAP_WEB_API_KEY: ${AMAP_WEB_API_KEY:-}
+      AMAP_REST_API_KEY: ${AMAP_REST_API_KEY:-}
+      AMAP_SECURITY_CODE: ${AMAP_SECURITY_CODE:-}
+      GITHUB_CLIENT_ID: ${GITHUB_CLIENT_ID:-}
+      GITHUB_CLIENT_SECRET: ${GITHUB_CLIENT_SECRET:-}
+      GITHUB_CALLBACK_URL: ${GITHUB_CALLBACK_URL:-}
+      GITHUB_TOKEN: ${GITHUB_TOKEN:-}
+    depends_on:
+      mongodb:
+        condition: service_healthy
     volumes:
       - ../backend/uploads:/app/uploads
       - ../backend/logs:/app/logs
-    depends_on:
-      - mongodb
-    # Railway会自动暴露端口，无需手动配置
+    ports:
+      - "${APP_PORT:-3000}:3000"
+    networks:
+      - ourverse-network
 
 volumes:
   mongodb_data:
-    # Railway提供持久化存储，无需额外配置
+
+networks:
+  ourverse-network:
+    driver: bridge
