Update .env configuration for production deployment: change MongoDB URI, update GitHub callback URL, and set domain and API base URL to 'our-verse.com'. Add allowed origins for CORS.

--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@
 # ==========================================
 
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/ourverse
+#MONGODB_URI=mongodb://localhost:27017/ourverse
+MONGODB_URI=mongodb://ourverse:ourverse@localhost:27017/ourverse?authSource=admin
 
 # Authentication & Security
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
@@ -13,21 +14,21 @@ DAILY_UPLOAD_LIMIT=5
 # GitHub OAuth Configuration
 GITHUB_CLIENT_ID=Ov23liJIjrJfj05yFLQq
 GITHUB_CLIENT_SECRET=c015187d32fb8cd7d54d716649a151a472bb2044
-GITHUB_CALLBACK_URL=https://rema-polysyllabic-yamileth.ngrok-free.dev/api/auth/github/callback
-
+GITHUB_CALLBACK_URL=https://www.our-verse.com/api/auth/github/callback
 GITHUB_TOKEN=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
 
 # Domain & Protocol Configuration
-DOMAIN=rema-polysyllabic-yamileth.ngrok-free.dev
+DOMAIN=our-verse.com
 PROTOCOL=https
-FRONTEND_URL=https://rema-polysyllabic-yamileth.ngrok-free.dev
-API_BASE_URL=https://rema-polysyllabic-yamileth.ngrok-free.dev
+FRONTEND_URL=https://www.our-verse.com/
+API_BASE_URL=https://www.our-verse.com/
+ALLOWED_ORIGINS=https://www.ourverse.com,https://our-verse.com
 
 
 # Server Configuration
 PORT=8444
 NODE_ENV=production
-API_BASE_URL=https://rema-polysyllabic-yamileth.ngrok-free.dev
+API_BASE_URL=https://www.our-verse.com/
 
 # Amap (高德地图) API Configuration
 AMAP_WEB_API_KEY=c8cb70e52409857f684c6fb41fc6e7b4
@@ -71,4 +72,3 @@ DOCKER_NGINX_HTTPS_PORT=443
 LOG_LEVEL=info
 LOG_FILE=logs/app.log
 # 临时禁用安全码进行测试
-
