--- a/.env
+++ b/.env
@@ -1,74 +1,34 @@
-# ==========================================
-# OurVerse Photo Sharing App - Configuration
-# ==========================================
+# OurVerse production defaults (do not commit real secrets)
+NODE_ENV=production
+HOST=0.0.0.0
+PORT=8444
 
-# Database Configuration
-#MONGODB_URI=mongodb://localhost:27017/ourverse
-MONGODB_URI=mongodb://ourverse:ourverse@localhost:27017/ourverse?authSource=admin
+MONGODB_URI=mongodb://ourverse:password@localhost:27017/ourverse?authSource=admin
 
-# Authentication & Security
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-BCRYPT_SALT_ROUNDS=10
-DAILY_UPLOAD_LIMIT=5
-
-# GitHub OAuth Configuration
-GITHUB_CLIENT_ID=Ov23liJIjrJfj05yFLQq
-GITHUB_CLIENT_SECRET=c015187d32fb8cd7d54d716649a151a472bb2044
-GITHUB_CALLBACK_URL=https://www.our-verse.com/api/auth/github/callback
-GITHUB_TOKEN=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
-
-# Domain & Protocol Configuration
 DOMAIN=our-verse.com
 PROTOCOL=https
-FRONTEND_URL=https://www.our-verse.com/
-API_BASE_URL=https://www.our-verse.com/
-ALLOWED_ORIGINS=https://www.ourverse.com,https://our-verse.com
+FRONTEND_URL=https://www.our-verse.com
+ALLOWED_ORIGINS=https://www.our-verse.com,https://www.ourverse.com
 
+JWT_SECRET=replace-with-strong-secret
+SESSION_SECRET=replace-with-strong-secret
+BCRYPT_SALT_ROUNDS=10
+SESSION_COOKIE_MAX_AGE=86400000
 
-# Server Configuration
-PORT=8444
-NODE_ENV=production
-API_BASE_URL=https://www.our-verse.com/
+DAILY_UPLOAD_LIMIT=3
+MAX_DISTANCE_VERIFICATION=50
+MAX_FILE_SIZE=10485760
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp,image/heic,image/heif
+UPLOADS_DIR=uploads
 
-# Amap (高德地图) API Configuration
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
 AMAP_WEB_API_KEY=c8cb70e52409857f684c6fb41fc6e7b4
 AMAP_REST_API_KEY=26859910799f521708e1fa83aebf3582
 AMAP_SECURITY_CODE=bc478c0ea499e9592e5a5f129702fd34
 
-# File Upload Configuration
-MAX_FILE_SIZE=10485760
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp
-UPLOADS_DIR=uploads
-
-# Business Logic Parameters
-DAILY_UPLOAD_LIMIT=3
-MAX_DISTANCE_VERIFICATION=50
-LOCATION_VERIFICATION_RADIUS=50
-
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-
-# Session Configuration
-SESSION_COOKIE_MAX_AGE=86400000
-SESSION_SECRET=your-session-secret-key
-
-# Health Check
-HEALTH_CHECK_PORT=3000
-
-# CORS Configuration
-CORS_ORIGIN=*
-
-# SSL/TLS Configuration (Production)
-SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
-SSL_KEY_PATH=/etc/nginx/ssl/key.pem
-
-# Docker Configuration
-DOCKER_APP_PORT=3000
-DOCKER_NGINX_HTTP_PORT=80
-DOCKER_NGINX_HTTPS_PORT=443
-
-# Logging
-LOG_LEVEL=info
-LOG_FILE=logs/app.log
-# 临时禁用安全码进行测试
+GITHUB_CLIENT_ID=Ov23liJIjrJfj05yFLQq
+GITHUB_CLIENT_SECRET=c015187d32fb8cd7d54d716649a151a472bb2044
+GITHUB_CALLBACK_URL=https://www.our-verse.com/api/auth/github/callback
+GITHUB_TOKEN=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
