--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,12 +4,16 @@
 server {
     listen 80;
     server_name www.our-verse.com;
+    client_max_body_size 110m;
     return 301 https://$server_name$request_uri;
 }
 
 server {
     listen 443 ssl http2;
     server_name www.our-verse.com;
+
+    # 允许最多 ~100MB 的上传，以匹配应用限制
+    client_max_body_size 110m;
 
     # SSL 证书配置 (需要先获取证书)
     # ssl_certificate /path/to/your/certificate.crt;
