--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,7 +4,7 @@
 server {
     listen 80;
     server_name www.our-verse.com;
-    client_max_body_size 100m;
+    client_max_body_size 0;
     return 301 https://$server_name$request_uri;
 }
 
@@ -12,8 +12,8 @@ server {
     listen 443 ssl http2;
     server_name www.our-verse.com;
 
-    # 允许最多 ~100MB 的上传，预留少量开销
-    client_max_body_size 100m;
+    # 取消上传大小限制，换行层面不要阻塞大文件
+    client_max_body_size 0;
 
     # SSL 证书配置 (需要先获取证书)
     # ssl_certificate /path/to/your/certificate.crt;
